--- a/e2e/index.html
+++ b/e2e/index.html
@@ -9,7 +9,7 @@
     <script src="index.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const Rangee = require('rangee');
+            const { Rangee } = require('rangee');
             const rangee = new Rangee({ document: document });
             document.getElementById('get').addEventListener('click', function () {
                 const selection = document.getSelection()
